# automythic-ai

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
app/: layout.tsx  providers.tsx
app/adventures/: layout.tsx
app/adventures/new/: page.tsx
app/shop/: page.tsx
components/: NetworkAlert.tsx  SolanaWalletButton.tsx  WalletDebugInfo.tsx  navigation.tsx
examples/: animation-metadata.json  character-metadata.json  item-metadata.json  scene-metadata.json
lib/: config.ts  imageGenerator.ts
programs/shop/: Cargo.toml
programs/shop/src/: lib.rs
scripts/: add-item-with-metadata.js  check-history.js  delete-item.js  deploy.js  generate-wallet.js  purchase-item.js  shop-client.js  upload-metadata.js
wallets/: solana.tsx
