[package]
name = "shop"
version = "0.1.0"
description = "Digital item shop for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
solana-program = "1.17.0" 